# kit

./: .file-size-waiver  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  agent-shape.toml  deny.toml
agent-shape-reports/: baseline-v0.11.0-n5.checkpoint.jsonl  baseline-v0.11.0-n5.json  baseline-v0.11.0-n5.md
resources/: skill.md
scripts/: agent-shape-fixture.sh
src/: config.rs  lockfile.rs  main.rs  mise.rs  platform.rs  registry.rs  tool.rs  verify.rs
src/ci/: apply.rs  check.rs  evaluate.rs  mod.rs  sense.rs  verify_registry.rs
src/source/: mod.rs
