[package]
name = "nomograph-kit"
version = "0.7.0"
edition = "2024"
description = "Verified tool registry manager -- manages developer toolchains from git-based registries"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/kit"
homepage = "https://gitlab.com/nomograph/kit"
keywords = ["supply-chain", "tools", "mise", "registry", "verification"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["*.png", "*.svg", "hero.*", "avatar.*"]
license = "MIT"

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
serde_json = "1"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
shellexpand = "3"
tempfile = "3"
clap_mangen = "0.2"
